fix dish and menu category model
